--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@arethetypeswrong/core": "^0.18.2",
     "@microsoft/api-extractor": "^7.56.0",
-    "@rsbuild/core": "^1.7.2",
+    "@rsbuild/core": "2.0.0-beta.4",
     "@rslib/core": "^0.19.4",
     "@rslint/core": "^0.2.0",
     "@types/marked-terminal": "^6.1.1",
@@ -56,7 +56,7 @@
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
-    "@rsbuild/core": "*",
+    "@rsbuild/core": "^1.0.0 || ^2.0.0-0",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
